--- a/app/src/main/res/drawable/ic_next.xml
+++ b/app/src/main/res/drawable/ic_next.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
+<vector android:autoMirrored="true" android:height="100dp"
+    android:viewportHeight="100" android:viewportWidth="100"
+    android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M95,51.4L52.2,75.9c-1.3,0.8 -3.2,-0.2 -3.2,-1.7V51.9l-41.2,24C6.4,76.7 5,75.7 5,74.2V25.1c0,-1.5 1.4,-2.5 2.8,-1.7l41.2,24V25.1c0,-1.5 1.9,-2.5 3.2,-1.7l42.6,24.5C96.2,48.7 96.3,50.6 95,51.4z"/>
 </vector>
