--- a/app/src/main/res/drawable/ic_previous.xml
+++ b/app/src/main/res/drawable/ic_previous.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"/>
+<vector android:autoMirrored="true" android:height="100dp"
+    android:viewportHeight="100" android:viewportWidth="100"
+    android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="M5.9,51.4l42.8,24.5c1.3,0.8 3.3,-0.2 3.3,-1.7V51.9l41.2,24c1.3,0.8 2.8,-0.2 2.8,-1.7V25.1c0,-1.5 -1.4,-2.5 -2.8,-1.7L52,47.3V25.1c0,-1.5 -2,-2.5 -3.3,-1.7L6.1,47.9C4.7,48.7 4.6,50.6 5.9,51.4z"/>
 </vector>
